<resources>
    <string name="app_name">Virtucure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="menu_referred">Referred</string>
    <string name="menu_view">View</string>
    <string name="menu_shared">Shared</string>
    <string name="menu_sub_head">Case Record</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_viewpatients">View Patients</string>
    <string name="title_activity_addforms">Add Forms</string>
    <string name="title_activity_create_new_case_record">create_new_case_record</string>
    <string name="caseRecordsTitle"><u>Case Records</u></string>
    <string name="title_activity_caserecord_forms">Existing Case Records</string>
    <string name="title_activity_patient_detail">Patient Details</string>
    <string name="title_activity_form_share">Form Share</string>
    <string name="title_activity_referred_patient_admins">Referred Patient - Administrations</string>
    <string name="title_activity_referred_patient_branches">Referred Patient - Branches</string>
    <string name="title_activity_referred_patient_hrids">Referred Patient - Patients</string>
    <string name="title_activity_referred_patient_case_records">Referred Patient - Case Records</string>
    <string name="title_activity_referred_patient_shared_time">Referred Patient - Shared Date</string>
    <string name="title_activity_referred_patient_forms">Referred Patient - Records</string>
    <string name="info_referred_empty_records">No Referred Records Found</string>
    <string name="info_share_empty_records">No Shared Records Found</string>
    <string name="title_activity_shared_record">Shared Records</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="shared_name_string">%1$s ( %2$s )</string>
    <string name="fill_form_msg">Please Fill The Form</string>
    <string name="save_record_msg">Do you want to save record</string>
    <string name="empty_save_record_msg">Do you want to continue with empty record</string>
    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
    <string-array name="array_formtype">
        <item>Select Form</item>
        <item>History Taking</item>
        <item>General Health Screening</item>
        <item>Dental Assessment</item>
    </string-array>
    <string-array name="array_gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Decline To Mention</item>
    </string-array>
    <string-array name="relation">
        <item>Relation with Patient</item>
        <item>Physician</item>
        <item>Surgeon</item>
        <item>Dentist</item>
        <item>Gynaecologist</item>
        <item>Paediatrician</item>
        <item>Other</item>
    </string-array>
    <string-array name="proofType">
        <item>Proof Type</item>
        <item>Adhar Card</item>
        <item>Pan Card</item>
        <item>Driving License</item>
        <item>Voter Identity Card</item>
        <item>Ration Card</item>
        <item>Student Identity Card</item>
        <item>Passport</item>
    </string-array>
    <string-array name="countries">
        <item>Select Country</item>
        <item>India</item>
        <item>USA</item>
    </string-array>
    <string-array name="array_states_none">
        <item>Select State</item>
    </string-array>
    <string-array name="array_States_IN">
        <item>Select State</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_States_AUS">
        <item>Select State</item>
        <item>Akita</item>
        <item>Adelaide</item>
        <item>Brisbane</item>
        <item>Canberra</item>
        <item>Hobart</item>
        <item>Kingston</item>
        <item>Melbourne</item>
        <item>New South Wales</item>
        <item>Perth</item>
        <item>Queens lands</item>
        <item>South Australia</item>
        <item>Sydney</item>
        <item>Tokyo</item>
        <item>Tasmania</item>
        <item>Victoria</item>
        <item>Western Australia</item>
    </string-array>
    <string-array name="array_States_USA">
        <item>Select State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="investigation_required_1">Random Serum Glucose</string>
    <string name="investigation_required_2">Fasting Serum Glucose </string>
    <string name="investigation_required_3">Postprandial Serum Glucose</string>
    <string name="investigation_required_4">Oral Glucose Tolerance Test</string>
    <string name="investigation_required_5">Glucose Challenge Test</string>
    <string name="investigation_required_6">Glycated Hemoglobin (HbA1C)</string>
    <string name="investigation_required_7">Serum Urea</string>
    <string name="investigation_required_8">Serum Creatinine</string>
    <string name="investigation_required_9">Serum Cholesterol</string>
    <string name="investigation_required_10">Serum Uric Acid</string>
    <string name="investigation_required_11">Serum Total Protein</string>
    <string name="investigation_required_12">Serum Albumin</string>
    <string name="investigation_required_13">Serum Total Bilirubin</string>
    <string name="investigation_required_14">Serum Direct Bilirubin</string>
    <string name="investigation_required_15">AST (SGOT)</string>
    <string name="investigation_required_16">ALT (SGPT)</string>
    <string name="investigation_required_17">Alkaline Phosphatase</string>
    <string name="investigation_required_18">Amulase</string>
    <string name="investigation_required_19">Lipase</string>
    <string name="investigation_required_20">Gamma Glutamyl Transferase ( GT)</string>
    <string name="investigation_required_21">Lactate Dehydrogenase</string>
    <string name="investigation_required_22">Creatine Kinase (CK)</string>
    <string name="investigation_required_23">CK - MB</string>
    <string name="investigation_required_24">Troponin - I</string>
    <string name="investigation_required_25">Serum Electrolytes</string>
    <string name="investigation_required_26">Prothrombin Time (PT) with INR</string>
    <string name="investigation_required_27">APTT</string>
    <string name="investigation_required_28">Serum Calcium</string>
    <string name="investigation_required_29">Serum Phosphorus</string>
    <string name="investigation_required_30">Serum Iron</string>
    <string name="investigation_required_31">Total Iron Binding Capacity (TIBC)</string>
    <string name="investigation_profiles_1">Lipid Profile (T Chol, TG, HDL-C, LDL-C, VLDL-C)</string>
    <string name="investigation_profiles_2">Liver Profile (AST, ALT, ALP, T.Bill, D.Bill, TP, Alb)</string>
    <string name="investigation_profiles_3">Renal Profile (S.Urea, S.Crt, S.Na+k+)</string>
    <string name="investigation_profiles_4">Thyroid Profile (T3, T4, TSH)</string>
    <string name="investigation_profiles_5">Thyroid Mini Profile (FT4, TSH)</string>
    <string name="investigation_profiles_6">Thyroid Extended Profile (FT3, FT4, TSH, ANTI TPO)</string>
    <string name="investigation_profiles_7">Anemia Capsule (Serum Iron, TIBC, Ferritin)</string>
    <string name="investigation_profiles_8">Diabetes Capsule (FSG, PPSG, S.Crt, Lipid, Profile, HbAIC, Micro Alb)</string>
    <string name="investigation_profiles_9">Diabetes Mini Capsule (S Glucose, HBAIC, Micro Alb)</string>
    <string name="investigation_profiles_10">Urobilinogen</string>
    <string name="investigation_profiles_11">Microscopy</string>
    <string name="investigation_immunoassays_1">Total T3</string>
    <string name="investigation_immunoassays_2">Total T4</string>
    <string name="investigation_immunoassays_3">TSH</string>
    <string name="investigation_immunoassays_4">Free T3</string>
    <string name="investigation_immunoassays_5">Free T4 </string>
    <string name="investigation_immunoassays_6">Anti-TPO</string>
    <string name="investigation_immunoassays_7">LH</string>
    <string name="investigation_immunoassays_8">FHS</string>
    <string name="investigation_immunoassays_9">Prolactin</string>
    <string name="investigation_immunoassays_10">Testosterone</string>
    <string name="investigation_immunoassays_11">PSA</string>
    <string name="investigation_immunoassays_12">Ferritin</string>
    <string name="investigation_fluids_1">CSF Analysis</string>
    <string name="investigation_fluids_2">Pleural Fluid Analysis</string>
    <string name="investigation_fluids_3">Renal Profile (S.Urea, S.Crt, S.Na+k+)</string>
    <string name="investigation_fluids_4"> Ascitic Fluids:</string>
    <string name="investigation_fluids_4a">Proteins</string>
    <string name="investigation_fluids_4b">Glucose</string>
    <string name="investigation_fluids_4c">Albumin</string>
    <string name="investigation_fluids_4d">Amylase</string>
    <string name="investigation_urine_analysis_1">Electrolytes</string>
    <string name="investigation_urine_analysis_2">U. Micro Albumin </string>
    <string name="investigation_urine_analysis_3">U. Phosphates</string>
    <string name="investigation_urine_analysis_4">U. Uric Acid</string>
    <string name="investigation_urine_analysis_5">24 hrs.Urinary Proteins</string>
    <string name="investigation_urine_analysis_6">U. Creatinine</string>
    <string name="investigation_urine_analysis_7">U.Calcium </string>
</resources>