<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical"
        android:layout_height="wrap_content" android:id="@+id/required_block"
        android:layout_marginLeft="10dp">

        <CheckBox
            android:id="@+id/rch1"
            android:text="@string/investigation_required_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch2"
            android:text="@string/investigation_required_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch3"
            android:text="@string/investigation_required_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch4"
            android:text="@string/investigation_required_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch5"
            android:text="@string/investigation_required_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch6"
            android:text="@string/investigation_required_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch7"
            android:text="@string/investigation_required_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch8"
            android:text="@string/investigation_required_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch9"
            android:text="@string/investigation_required_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/rch10"
            android:text="@string/investigation_required_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch11"
            android:text="@string/investigation_required_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/rch12"
            android:text="@string/investigation_required_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch13"
            android:text="@string/investigation_required_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch14"
            android:text="@string/investigation_required_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/rch15"
            android:text="@string/investigation_required_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch16"
            android:text="@string/investigation_required_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch17"
            android:text="@string/investigation_required_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch18"
            android:text="@string/investigation_required_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/rch19"
            android:text="@string/investigation_required_19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/rch20"
            android:text="@string/investigation_required_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch21"
            android:text="@string/investigation_required_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/rch22"
            android:text="@string/investigation_required_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch23"
            android:text="@string/investigation_required_23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch24"
            android:text="@string/investigation_required_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch25"
            android:text="@string/investigation_required_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch26"
            android:text="@string/investigation_required_26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch27"
            android:text="@string/investigation_required_27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch28"
            android:text="@string/investigation_required_28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch29"
            android:text="@string/investigation_required_29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch30"
            android:text="@string/investigation_required_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/rch31"
            android:text="@string/investigation_required_31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical"
        android:layout_height="wrap_content" android:id="@+id/profiles_block"
        android:layout_marginLeft="10dp">
        <CheckBox
            android:id="@+id/pch1"
            android:text="@string/investigation_profiles_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch2"
            android:text="@string/investigation_profiles_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch3"
            android:text="@string/investigation_profiles_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/pch4"
            android:text="@string/investigation_profiles_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch5"
            android:text="@string/investigation_profiles_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/pch6"
            android:text="@string/investigation_profiles_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch7"
            android:text="@string/investigation_profiles_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch8"
            android:text="@string/investigation_profiles_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch9"
            android:text="@string/investigation_profiles_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch10"
            android:text="@string/investigation_profiles_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/pch11"
            android:text="@string/investigation_profiles_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical"
        android:layout_height="wrap_content" android:id="@+id/Immunoassays_block"
        android:layout_marginLeft="10dp">
        <CheckBox
            android:id="@+id/imch1"
            android:text="@string/investigation_immunoassays_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/imch2"
            android:text="@string/investigation_immunoassays_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/imch3"
            android:text="@string/investigation_immunoassays_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/imch4"
            android:text="@string/investigation_immunoassays_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/imch5"
            android:text="@string/investigation_immunoassays_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/imch6"
            android:text="@string/investigation_immunoassays_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/imch7"
            android:text="@string/investigation_immunoassays_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/imch8"
            android:text="@string/investigation_immunoassays_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/imch9"
            android:text="@string/investigation_immunoassays_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/imch10"
            android:text="@string/investigation_immunoassays_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/imch11"
            android:text="@string/investigation_immunoassays_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/imch12"
            android:text="@string/investigation_immunoassays_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical"
        android:layout_height="wrap_content" android:id="@+id/fluids_block"
        android:layout_marginLeft="10dp" android:layout_marginBottom="10dp">
        <CheckBox
            android:id="@+id/fch1"
            android:text="@string/investigation_fluids_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/fch2"
            android:text="@string/investigation_fluids_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/fch3"
            android:text="@string/investigation_fluids_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/f4"
            android:text="@string/investigation_fluids_4"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            android:textSize="15sp"/>
        <CheckBox
            android:id="@+id/fch5"
            android:text="@string/investigation_fluids_4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/fch6"
            android:text="@string/investigation_fluids_4b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/fch7"
            android:text="@string/investigation_fluids_4c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/fch8"
            android:text="@string/investigation_fluids_4d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical"
        android:layout_height="wrap_content" android:id="@+id/urineanalysis_block"
        android:layout_marginLeft="10dp">
        <CheckBox
            android:id="@+id/uch1"
            android:text="@string/investigation_urine_analysis_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/uch2"
            android:text="@string/investigation_urine_analysis_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/uch3"
            android:text="@string/investigation_urine_analysis_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/uch4"
            android:text="@string/investigation_urine_analysis_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/uch5"
            android:text="@string/investigation_urine_analysis_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/uch6"
            android:text="@string/investigation_urine_analysis_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/uch7"
            android:text="@string/investigation_urine_analysis_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>